REFACTOR: Fully updated Service layer, Provided unit tests